# conan-masscalculator-core

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py  config.yml
.github/workflows/: cmake.yml  conan-create.yml
all/: CMakeLists.txt  conandata.yml  conanfile.py
all/test_package/: CMakeLists.txt  conanfile.py
all/test_package/src/: example.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
tools/installers/: essentials.sh
